# pycon-community-pulse

./: .env.example  .gitignore  CLEANUP_REVIEW.md  DEPLOYMENT.md  FINAL_CHANGES.md  LICENSE  README.md  REFACTORING.md  test_api.py
.choreo/: context.yaml
ai-analysis-service/: Dockerfile  main.py  openapi.yaml  requirements.txt  test_db_connection.py
ai-analysis-service/.choreo/: component.yaml
ai-analysis-service/db/: config.py
ai-analysis-service/shared/: config.py  database.py
api-service/: Dockerfile  ca-85f67baa-6594-4397-b2a4-59b362a01435.pem  main.py  openapi.yaml  requirements.txt
api-service/.choreo/: component.yaml
api-service/db/: config.py  models.py
api-service/shared/: __init__.py  config.py  database.py
collector-service/: Dockerfile  collectors.py  main.py  requirements.txt
collector-service/.choreo/: component.yaml
collector-service/db/: __init__.py  config.py
collector-service/shared/: config.py
dashboard-service/: Dockerfile  main.py  pyproject.toml  requirements.txt
dashboard-service/.choreo/: component.yaml
dashboard-service/shared/: database.py
dashboard-service/templates/: dashboard.html
database/: schema.sql
docs/images/: .gitkeep  README.md
k8s/: 00-namespace.yaml  01-postgres.yaml  02-configmap.yaml  03-db-init-job.yaml  04-api-service.yaml  05-ai-analysis-service.yaml  06-dashboard-service.yaml  07-collector-cronjob.yaml  Dockerfile.ai-analysis-service  Dockerfile.api-service  Dockerfile.collector-service  Dockerfile.dashboard-service
shared/: config.py  models.py
